jwt payload handler for userId, one to many
