# openapi.yaml
@@ -5,32 +5,42 @@ info:
 tags:
   - name: cats
     description: Всё что касается котиков
+  - name: users
+    description: Всё что касается пользователей
 paths:
-  /cats/like/{uid}:
+  /likes:
+    get:
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - cats
+      summary: Список лайков
+      operationId: listLikes
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Like'
     post:
+      security:
+        - bearerAuth: []
       tags:
         - cats
       summary: Добавление лайка
-      operationId: addLike
-      parameters:
-        - name: uid
-          in: path
-          required: true
-          schema:
-            type: string
-          description: Уникальный идентификатор картинки
+      operationId: newLike
       requestBody:
-        description: URL котика
+        description: Новый лайк
         content:
           application/json:
             schema:
-              type: object
-              required:
-                - url
-              properties:
-                url:
-                  type: string
-                  description: URL котика
+              $ref: '#/components/schemas/Like'
         required: true
       responses:
         '201':
@@ -38,41 +48,29 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Cat'
+                $ref: '#/components/schemas/Like'
         '405':
           description: Invalid input
+  /likes/{cat_id}:
     delete:
+      security:
+        - bearerAuth: [ ]
       tags:
         - cats
       summary: Удаление лайка
-      operationId: removeLike
+      operationId: dropLike
       parameters:
-        - name: uid
+        - name: cat_id
+          description: id котика из https://thecatapi.com
           in: path
           required: true
           schema:
             type: string
-          description: Уникальный идентификатор картинки
       responses:
         '200':
           description: Successful operation
         '404':
           description: Like not found
-  /cats/likes:
-    get:
-      tags:
-        - cats
-      summary: Список лайков
-      operationId: getAllLikes
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Cat'
   /user:
     post:
       tags:
@@ -101,34 +99,6 @@ paths:
                 $ref: '#/components/schemas/User'
         '405':
           description: Invalid input
-        '409':
-          description: User with this login already exists
-  /user/login:
-    post:
-      tags:
-        - users
-      summary: Авторизация пользователя
-      operationId: loginUser
-      requestBody:
-        description: Данные для входа
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/LoginUser'
-        required: true
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  token:
-                    type: string
-                    description: Токен для последующей авторизации
-        '401':
-          description: Invalid login or password
 
 components:
   securitySchemes:
@@ -138,19 +108,21 @@ components:
       description: Ожидается токен, выдаваемый при регистрации пользователя
       bearerFormat: SHA256
   schemas:
-    User:
+    Like:
       type: object
       required:
-        - login
-        - password
+        - cat_id
       properties:
-        login:
+        cat_id:
+          description: Идентификатор котика из https://thecatapi.com
           type: string
-          description: Логин пользователя
-        password:
+          example: asu7as
+        created_at:
           type: string
-          description: Пароль пользователя
-    LoginUser:
+          format: date-time
+          example: 2024-03-20T09:12:28Z
+          description: Время создания лайка
+    User:
       type: object
       required:
         - login
